# taskmanager

./: Dockerfile  alembic.ini  docker-compose.yml
alembic/: env.py
app/api/v1/: router.py
app/core/: background_tasks.py  database.py
app/models/: base.py  task.py
app/repositories/: base.py  task_repository.py
app/services/: task_service.py
task_manager/: .env  pyproject.toml  readme.md  requirements.txt
task_manager/alembic/versions/: f89d43d99eed_initial_migration_for_task_and_tasklog_.py
task_manager/app/: main.py
task_manager/app/api/: dependencies.py
task_manager/app/api/v1/endpoints/: tasks.py
task_manager/app/core/: config.py
task_manager/app/schemas/: task.py
tests/: conftest.py  test_tasks.py
