[project]
name = "task_manager"
version = "0.1.0"
description = "Async Task Management API with Background Processing"
authors = [
    {name = "Valentin H.", email = "test.email@example.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.27.0",
    "alembic>=1.10.0",
    "pydantic>=1.10.0",
    "python-dotenv>=0.21.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
# It's generally good practice to put testing dependencies here
# if you only want them installed in development/test environments.
# If they are already in 'dependencies' above, you might not need this 'dev' section,
# or you can remove them from 'dependencies' and keep them only here.
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

# >>> Add this section for pytest-asyncio configuration <<<
[tool.pytest.ini_options]
asyncio_mode = "auto"